--- a/ChickinAirRider.vcxproj
+++ b/ChickinAirRider.vcxproj
@@ -169,7 +169,7 @@
     <ClCompile Include="Src\Object\Player\Machine\Machine.cpp" />
     <ClCompile Include="Src\Object\Player\Character\Character.cpp" />
     <ClCompile Include="Src\Object\Player\Player.cpp" />
-    <ClCompile Include="Src\Object\Stage\Stage.cpp" />
+    <ClCompile Include="Src\Object\Stage\StageObject.cpp" />
     <ClCompile Include="Src\pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
@@ -218,6 +218,10 @@
     <ClCompile Include="Src\Common\Vector2F.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Src\Loader\LoaderManager.h" />
+    <ClInclude Include="Src\Loader\CsvLoader.h" />
+    <ClInclude Include="Src\Loader\JsonLoader.h" />
+    <ClInclude Include="Src\Loader\ILoader.h" />
     <ClInclude Include="Src\Common\SingletonRegistry.h" />
     <ClInclude Include="Src\Common\Singleton.h" />
     <ClInclude Include="Src\Object\SkyDome\SkyDome.h" />
@@ -234,7 +238,7 @@
     <ClInclude Include="Src\Object\Player\Machine\Machine.h" />
     <ClInclude Include="Src\Object\Player\Character\Character.h" />
     <ClInclude Include="Src\Object\Player\Player.h" />
-    <ClInclude Include="Src\Object\Stage\Stage.h" />
+    <ClInclude Include="Src\Object\Stage\StageObject.h" />
     <ClInclude Include="Src\pch.h" />
     <ClInclude Include="Src\Scene\SceneSelect.h" />
     <ClInclude Include="Src\Scene\SceneGame.h" />
