--- a/ChickinAirRider.vcxproj
+++ b/ChickinAirRider.vcxproj
@@ -240,6 +240,7 @@
     <ClInclude Include="Src\Object\Player\Machine\Machine.h" />
     <ClInclude Include="Src\Object\Player\Character\Character.h" />
     <ClInclude Include="Src\Object\Player\Player.h" />
+    <ClInclude Include="Src\Object\Stage\StageImportData.h" />
     <ClInclude Include="Src\Object\Stage\StageObject.h" />
     <ClInclude Include="Src\pch.h" />
     <ClInclude Include="Src\Scene\SceneSelect.h" />
