--- a/ChickinAirRider.vcxproj
+++ b/ChickinAirRider.vcxproj
@@ -155,6 +155,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Src\Object\Player\Collision\PlayerOnHit.cpp" />
     <ClCompile Include="Src\Loader\DataRegistry.cpp" />
     <ClCompile Include="Src\Object\SkyDome\SkyDome.cpp" />
     <ClCompile Include="Src\Manager\Game\StageManager.cpp" />
@@ -219,6 +220,7 @@
     <ClCompile Include="Src\Common\Vector2F.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Src\Object\Player\Collision\PlayerOnHit.h" />
     <ClInclude Include="Src\Loader\DataRegistry.h" />
     <ClInclude Include="Src\Loader\LoaderManager.h" />
     <ClInclude Include="Src\Loader\CsvLoader.h" />
