--- a/ChickinAirRider.vcxproj
+++ b/ChickinAirRider.vcxproj
@@ -155,6 +155,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Src\Manager\Game\MachineManager.cpp" />
     <ClCompile Include="Src\Manager\Game\AnimationManager.cpp" />
     <ClCompile Include="Src\Object\Item\ItemBase.cpp" />
     <ClCompile Include="Src\Object\Player\Collision\PlayerOnHit.cpp" />
@@ -222,6 +223,7 @@
     <ClCompile Include="Src\Common\Vector2F.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Src\Manager\Game\MachineManager.h" />
     <ClInclude Include="Src\Manager\Game\AnimationManager.h" />
     <ClInclude Include="Src\Object\Item\ItemBase.h" />
     <ClInclude Include="Src\Object\Player\AnimationImportData.h" />
@@ -233,6 +235,7 @@
     <ClInclude Include="Src\Loader\ILoader.h" />
     <ClInclude Include="Src\Common\SingletonRegistry.h" />
     <ClInclude Include="Src\Common\Singleton.h" />
+    <ClInclude Include="Src\Object\Player\Machine\MachineImportData.h" />
     <ClInclude Include="Src\Object\SkyDome\SkyDome.h" />
     <ClInclude Include="Src\Manager\Game\StageManager.h" />
     <ClInclude Include="Src\Object\Player\Action\ActionBase.h" />
