--- a/ChickinAirRider.vcxproj
+++ b/ChickinAirRider.vcxproj
@@ -370,6 +370,47 @@
     <ClInclude Include="Src\Manager\Game\Timer.h" />
     <ClInclude Include="Src\Common\Vector2F.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Src\Shader\Common\Pixel\PixelShader2DHeader.hlsli" />
+    <None Include="Src\Shader\Common\Pixel\PixelShader3DHeader.hlsli" />
+    <None Include="Src\Shader\Common\VertexToPixelHeader.hlsli" />
+    <None Include="Src\Shader\Common\Vertex\CommonShader3DHeader.hlsli" />
+    <None Include="Src\Shader\Common\Vertex\VertexInput.hlsli" />
+    <None Include="Src\Shader\Common\Vertex\VertexInputType.hlsli" />
+    <None Include="Src\Shader\Common\Vertex\VertexShader3DHeader.hlsli" />
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="Src\Shader\Model\BoxCrackPS.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Pixel</ShaderType>
+    </FxCompile>
+    <FxCompile Include="Src\Shader\Model\BoxCrackVS.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
+    </FxCompile>
+    <FxCompile Include="Src\Shader\Model\MetalModelPS.hlsl" />
+    <FxCompile Include="Src\Shader\Model\MetalModelVS.hlsl" />
+    <FxCompile Include="Src\Shader\Model\MistModelPS.hlsl" />
+    <FxCompile Include="Src\Shader\Model\MistModelVS.hlsl" />
+    <FxCompile Include="Src\Shader\Model\NoTexPS.hlsl" />
+    <FxCompile Include="Src\Shader\Model\NoTexVS.hlsl" />
+    <FxCompile Include="Src\Shader\Model\PointLightPS.hlsl" />
+    <FxCompile Include="Src\Shader\Model\PointLightVS.hlsl" />
+    <FxCompile Include="Src\Shader\Model\RimModelPS.hlsl" />
+    <FxCompile Include="Src\Shader\Model\RimModelVS.hlsl" />
+    <FxCompile Include="Src\Shader\Model\StdModelPS.hlsl" />
+    <FxCompile Include="Src\Shader\Model\StdModelVS.hlsl" />
+    <FxCompile Include="Src\Shader\Model\WaterWaveModelPS.hlsl" />
+    <FxCompile Include="Src\Shader\Model\WaterWaveModelVS.hlsl" />
+    <FxCompile Include="Src\Shader\PostEffect\LensDistortion.hlsl" />
+    <FxCompile Include="Src\Shader\PostEffect\Monotone.hlsl" />
+    <FxCompile Include="Src\Shader\PostEffect\ScanLine.hlsl" />
+    <FxCompile Include="Src\Shader\PostEffect\Vignette.hlsl" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
