音とタイマーの処理

--- a/ChickinAirRider.vcxproj
+++ b/ChickinAirRider.vcxproj
@@ -163,6 +163,7 @@
     </FxCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Src\Object\Item\PowerUpItem.cpp" />
     <ClCompile Include="Src\Manager\Game\GameSetting.cpp" />
     <ClCompile Include="Src\Manager\Game\ItemManager.cpp" />
     <ClCompile Include="Src\Object\Item\ItemBox.cpp" />
@@ -235,6 +236,7 @@
     <ClCompile Include="Src\Object\Player\UI\PlayerUI.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Src\Object\Item\PowerUpItem.h" />
     <ClInclude Include="Src\Manager\Game\GameSetting.h" />
     <ClInclude Include="Src\Manager\Game\ItemManager.h" />
     <ClInclude Include="Src\Object\Item\BoxCreatePositionData.h" />
