--- a/ChickinAirRider.vcxproj
+++ b/ChickinAirRider.vcxproj
@@ -163,6 +163,7 @@
     </FxCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Src\Scene\Select\SceneOption.cpp" />
     <ClCompile Include="Src\Scene\Game\LastMiniGame\DeathMatch.cpp" />
     <ClCompile Include="Src\Object\Item\BattleItem\CannonShot.cpp" />
     <ClCompile Include="Src\Object\Item\BattleItem\Cannon.cpp" />
@@ -199,7 +200,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="Src\Scene\SceneSelect.cpp" />
+    <ClCompile Include="Src\Scene\Select\SceneSelect.cpp" />
     <ClCompile Include="Src\Scene\Game\SceneGame.cpp" />
     <ClCompile Include="Src\Scene\SceneTitle.cpp" />
     <ClCompile Include="Src\Scene\SceneBase.cpp" />
@@ -244,6 +245,7 @@
     <ClCompile Include="Src\Manager\Game\UIManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Src\Scene\Select\SceneOption.h" />
     <ClInclude Include="Src\Scene\Game\LastMiniGame\DeathMatch.h" />
     <ClInclude Include="Src\Object\Item\BattleItem\CannonShot.h" />
     <ClInclude Include="Src\Object\Item\BattleItem\Cannon.h" />
@@ -288,7 +290,7 @@
     <ClInclude Include="Src\Object\Stage\StageImportData.h" />
     <ClInclude Include="Src\Object\Stage\StageObject.h" />
     <ClInclude Include="Src\pch.h" />
-    <ClInclude Include="Src\Scene\SceneSelect.h" />
+    <ClInclude Include="Src\Scene\Select\SceneSelect.h" />
     <ClInclude Include="Src\Scene\Game\SceneGame.h" />
     <ClInclude Include="Src\Scene\SceneTitle.h" />
     <ClInclude Include="Src\Scene\SceneBase.h" />
