エアグライダー作成中 HPバーにバグあり。

--- a/ChickinAirRider.vcxproj
+++ b/ChickinAirRider.vcxproj
@@ -163,6 +163,7 @@
     </FxCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Src\Scene\Game\LastMiniGame\AirGlider.cpp" />
     <ClCompile Include="Src\Scene\Select\SceneOption.cpp" />
     <ClCompile Include="Src\Scene\Game\LastMiniGame\DeathMatch.cpp" />
     <ClCompile Include="Src\Object\Item\BattleItem\CannonShot.cpp" />
@@ -245,6 +246,7 @@
     <ClCompile Include="Src\Manager\Game\UIManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Src\Scene\Game\LastMiniGame\AirGlider.h" />
     <ClInclude Include="Src\Scene\Select\SceneOption.h" />
     <ClInclude Include="Src\Scene\Game\LastMiniGame\DeathMatch.h" />
     <ClInclude Include="Src\Object\Item\BattleItem\CannonShot.h" />
