--- a/ChickinAirRider.vcxproj
+++ b/ChickinAirRider.vcxproj
@@ -163,6 +163,7 @@
     </FxCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Src\Manager\Game\GlobalUIManager.cpp" />
     <ClCompile Include="Src\Scene\Game\LastMiniGame\AirGlider.cpp" />
     <ClCompile Include="Src\Scene\Select\SceneOption.cpp" />
     <ClCompile Include="Src\Scene\Game\LastMiniGame\DeathMatch.cpp" />
@@ -246,6 +247,7 @@
     <ClCompile Include="Src\Manager\Game\UIManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Src\Manager\Game\GlobalUIManager.h" />
     <ClInclude Include="Src\Scene\Game\LastMiniGame\AirGlider.h" />
     <ClInclude Include="Src\Scene\Select\SceneOption.h" />
     <ClInclude Include="Src\Scene\Game\LastMiniGame\DeathMatch.h" />
