--- a/ChickinAirRider.vcxproj.filters
+++ b/ChickinAirRider.vcxproj.filters
@@ -252,6 +252,9 @@
     <ClCompile Include="Src\Manager\Game\GlobalUIManager.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Src\Scene\SceneResult.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\Common\Fader.h">
@@ -728,6 +731,9 @@
     <ClInclude Include="Src\Manager\Game\GlobalUIManager.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="Src\Scene\SceneResult.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Src\Shader\Common\Pixel\PixelShader2DHeader.hlsli" />
@@ -763,5 +769,6 @@
     <FxCompile Include="Src\Shader\PostEffect\GodRay.hlsl" />
     <FxCompile Include="Src\Shader\PostEffect\Title.hlsl" />
     <FxCompile Include="Src\Shader\PostEffect\TitleUi.hlsl" />
+    <FxCompile Include="Src\Shader\PostEffect\Number.hlsl" />
   </ItemGroup>
 </Project>
